<resources>
    <string name="app_name">Tau-Pay</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="token" translatable="false"> </string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yorumunuzu_buraya_yazabilirsiniz_opsiyonel">Leave a comment here (optional)</string>
    <string name="mensa">Canteen</string>
    <string name="degerlendirilecek_kisim">Section to be evaluated:</string>
    <string name="id">ID</string>
    <string name="sifre">Password</string>
    <string name="sifremi_unuttum">I forgot my password</string>
    <string name="giris_yap">Login</string>
    <string name="sifre_degistir">Change Password</string>
    <string name="cikis_yap">Logout</string>
    <string name="almanca">German</string>
    <string name="dil">Language:</string>
    <string name="turkce">Turkish</string>
    <string name="bagis_yapmaya_devam_etmek_istiyor_musunuz">Would you like to continue the donation?</string>
    <string name="eski_sifre">Old Password</string>
    <string name="yeni_sifre">New Password</string>
    <string name="yeni_sifre_onayla">Confirm new password</string>
    <string name="bu_kisiyi_onermek_istediginize_emin_misiniz">Are you sure you want to suggest this person?</string>
    <string name="evet">Yes</string>
    <string name="hayir">No</string>
    <string name="bu_kisiye_para_gondermeye_devam_etmek_istiyor_musunuz">Would you like to continue to send money to this person?</string>
    <string name="dikkatspenden">Attention! Here you can donate a randomly selected student of the Turkish-German University. The amount of donations for each meal is 4.00 TL and for each shuttle 2.20 TL.</string>
    <string name="miktar_en_az_1_adet">Amount (min. 1 piece)</string>
    <string name="dikkatempfehlen">Hereby recommend a student to be included in the list of need. If enough people recommend this person, they will be added to the list and also qualified for free meals.</string>
    <string name="odeme_yap">Submit Payment</string>
    <string name="dikkatparagonder">Here you can send money by entering the number of your friend.</string>
    <string name="ogrenci_numarasi">Matriculation Number</string>
    <string name="miktar">Amount</string>
    <string name="gonder">Send</string>
    <string name="togglebutton" translatable="false">ToggleButton</string>
    <string name="yemekhane">Canteen</string>
    <string name="shuttle">Shuttle</string>
    <string name="ad_soyad">Name, Surname:</string>
    <string name="yemek_bakiyesi">Canteen Balance:</string>
    <string name="xxxxxxxxx" translatable="false">xxxxxxxxx</string>
    <string name="xx_xx_tl">XX.XX TL</string>
    <string name="xxx_xx_tl">XX.XX TL</string>
    <string name="forgotpassword">Here you can reset your password. Enter your Identification Number here. The instructions to reset your password will be sent to your E-Mail</string>
    <string name="numarası">Number:</string>
    <string name="shuttle_bakiyesi">Shuttle Balance:</string>
    <string name="onayla">Confirm</string>
    <string name="iptal">Cancel</string>
    <string name="dil_secenegi">Language</string>
    <string name="para_gonder">Send Money</string>
    <string name="odeme">Payment</string>
    <string name="bagis">Donation</string>
    <string name="oner">Suggest</string>
    <string name="feedback">Feedback</string>
    <string name="ayarlar">Settings</string>
    <string name="ingilizce">English</string>
    <string name="yemekhane_yorum">Here you can leave a comment and a rating for today\'s meal in the canteen or the shuttle</string>
    <string name="feedback_yorumkismi">Write your comment here...</string>
    <string name="bagisiniz_kabul_edilmistir">Your donation was accepted!</string>
    <string name="kisi_onerilmistir">The student was recommended</string>
    <string name="kisi_onerilmedi">The student was NOT recommended</string>
    <string name="degerlendirmeyi_göndermek_istiyor_musunuz">Do you want to send this feedback?</string>
    <string name="degerlendirme_gonderilmedi">The feedback was not sent</string>
    <string name="degerlendirme_gonderildi">The feedback was sent</string>
    <string name="ogrenci_numarasi_veya_sifre_yanlis">ID or Password is wrong!</string>
    <string name="odeme_zamaninda_yapilmadi">Payment was not made in time! Please retry</string>
    <string name="para_gonderildi">The transaction was successful</string>
    <string name="sifreuyusmuyor">Passwords do not match</string>
    <string name="ogrenci_numaranizi_girin">Insert your ID</string>
    <string name="odeme_basarili">Payment successful</string>
    <string name="lutfen_yeni_qr_code_istemeyin">Please do not request a new QR-Code without having the current one processed/canceled</string>
    <string name="para_gonderilmedi">Transfer was aborted</string>
    <string name="sifredegistirildi">Password was changed</string>
    <string name="bagis_iptal_edildi">The donation was cancelled</string>
</resources>
